# pyquotes

./: .coveragerc  .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.github/utils/: check_version.py
.github/workflows/: codeql-analysis.yml  pypi.yml  tests.yml
pyquotes/: cli.py  quotes.py  settings.py  transform.py
tests/: test_cli.py  test_settings.py  test_transform.py
tests/data/: docstrings.py  double_quotes.py  prefixes.py  single_quotes.py
tests/data/cli/: invalid.py
tests/data/cli/nested/: c.txt
