[metadata]
name = pyquotes
version = attr: pyquotes.__version__
description = pyquotes normalizes quotes in your Python codebase
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/ThiefMaster/pyquotes
license = MIT
author = Adrian Moennich
author_email = adrian@planetcoding.net
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.6
install_requires =
    click
    parso

[options.extras_require]
dev =
    black
    flake8
    flake8-quotes
    isort
    twine
    wheel

[options.entry_points]
console_scripts =
    pyquotes = pyquotes.cli:main


[flake8]
ignore = E203
max-line-length=88
inline-quotes = single
multiline-quotes = single
docstring-quotes = double
avoid-escape = true
